Skin issues: - when hovering the action menu, the background image is not aligned to the top - when reducing the font size (or on systems with smaller fonts) the header image (logo with birds) is overlapping the breadcrumbs.
Markup issue: a html comment precedes the <?xml?> declaration; replaced with a velocity comment.

Merged from trunk


git-svn-id: https://svn.xwiki.org/svnroot/xwiki/xwiki/branches/XWIKI_1_0@2446 f329d543-caf0-0310-9063-dda96c69346f

--- a/web/standard/src/main/webapp/skins/xwiki10b1/screenlayout.css
+++ b/web/standard/src/main/webapp/skins/xwiki10b1/screenlayout.css
@@ -58,6 +58,7 @@ Global header
 #headerglobal{
   display: block;
   height: 8em;
+  min-height: 100px;
   border-right:200px solid ;
   z-index: 1;
 }
@@ -66,6 +67,7 @@ Global header
   float: left;
   width: 200px;
   height: 8em;
+  min-height: 100px;
   margin-right: -200px;
 }
 
